@@ -15,6 +15,7 @@
         <li>The current directory</li>
         <li>~/.config/MonkeyWrench (linux only)</li>
         <li>/etc (linux only)</li>
+        <li>MyDocuments folder (windows only)</li>
     </ol>
     <h2>
         Format</h2>
